gcp/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ultra-crop
  labels:
    name: ultra-crop
    app: ultra-crop-recommender
